[gd_scene load_steps=4 format=3 uid="uid://corirhyn03l0x"]

[ext_resource type="Script" uid="uid://cpywymsy8oqnd" path="res://pause_menu.gd" id="1_ymabs"]
[ext_resource type="AudioStream" uid="uid://dobpqbspunihg" path="res://Audio/GUI/click.wav" id="2_gw3pd"]
[ext_resource type="AudioStream" uid="uid://bwahs2mtjus02" path="res://Audio/GUI/hover.wav" id="2_whypk"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ymabs")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 256.0
offset_top = 64.0
offset_right = 448.0
offset_bottom = 320.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="btn_resume" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Продовжити"

[node name="btn_restart" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Рестарт"

[node name="btn_quit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Вийти"

[node name="snd_hover" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_whypk")
volume_db = 10.0

[node name="snd_click" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_gw3pd")
volume_db = 10.0

[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/btn_resume" to="." method="_on_resume_mouse_entered"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/btn_resume" to="." method="_on_resume_pressed"]
[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/btn_restart" to="." method="_on_restart_mouse_entered"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/btn_restart" to="." method="_on_restart_pressed"]
[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/btn_quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/btn_quit" to="." method="_on_quit_pressed"]
